2005-02-24	blytkerchan
	* deque.c (deque_stabilize_back): fix (hopefully)

	* deque.c (deque_node_alloc): rename from node_alloc
	(deque_node_free): rename from node_free
	(deque_stabilize_front): new function
	(deque_stabilize_back): ditto
	(deque_stabilize): implement

2005-02-23	blytkerchan	adding partial deque implementation
	* deque.c: new file
	* deque.h: ditto

2004-10-28	blytkerchan
	* array.c: canonicalize the arch-specific includes
	canonicalize libmemory includes
	* binomial_tree.c: ditto
	* hash.c: ditto
	* heap.c: ditto
	* list.c: ditto
	* list_node.c: ditto
	* map.c: ditto
	* queue.c: ditto
	* stack.c: ditto
	* vector.c: ditto

2004-10-22	blytkerchan
	* hash.c (hash_remove): implement

implement lock-free hash implementation
	* hash.h: include list_node.h
	[hash_t]: new member n_entries
	change type of buckets member to list_node_t
	[hash_node_t]: move to hash.c
	(hash_put): change prototype to not return a value
	* hash.c: include arch/include/compare_and_exchange.h
	include arch/include/increment.h
	[hash_node_t]: move to this file from hash.h
	(hash_node_new): don't cast return value of calloc
	reflect changes to hash.h
	(hash_free_helper): remove
	(hash_free): re-implement to not use list_foreach
	(hash_get): re-implement to use list nodes in stead of full-fledged
	lists
	(hash_put): implement
	(hash_keys): ditto
	(hash_foreach): ditto
	(hash_foreach_helper): new function
	* list.c (list_foreach): use list_node_foreach
	* list_node.c (list_node_find): document the state of the hazard
	pointers on return
	(list_node_foreach): new function
	* list_node.h (list_node_foreach): new function

2004-10-21	blytkerchan	compile vector impl with stricter compiler
	* vector.h [vector_t]: change types of size_t elements to uint32_t
	* vector.c: prefer local copies to installed ones for libmemory
	headers
	(internal_resize): reflect changes to vector_t

move list node functions to their own files
	* list_node.c: new file
	* list_node.h: ditto